I have added bootstrap for my visual layout

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,9 +1,8 @@
 <html>
   <head>
-    <title>IdeaBox</title>
+    <title>Edit Page</title>
   </head>
   <body>
-    <h1>IdeaBox</h1>
 
     <form action="/<%= id %>" method="POST">
       <p>
