adding the other files that were left out

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -48,8 +48,10 @@
             <input type='submit'/>
           </form></center>
         </div>
-    <h1>IdeaBox</h1>
+    <div class="wrapper">
+      <h1>IdeaBox</h1>
     <%= yield %>
+    </div>
     <div class = "navbar navbar-default navbar-fixed-bottom">
     
       <div class = "container">
