--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
 body {
   margin-top: 60px;
+  margin-bottom: 600px;
+}
+
+.wrapper {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
