--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,20 @@
 body {
   margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+ul.ideas{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li.idea{
+  width: 30%;
+  float: left;
+  padding: 0% 1%;
+  margin: 1% 1%;
+  background-color: eeeeee;
+
 }
