--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@ body {
   margin-top: 60px;
   margin-bottom: 600px;
 }
+ 
+footer {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
 
-.wrapper {
-  margin-top: 100px;
-  margin-bottom: 100px;
-  padding-top: 100px;
-  padding-bottom: 100px;
+ul.ideas{
+  list-style: none;
 }
