--- a/views/index.erb
+++ b/views/index.erb
@@ -1,22 +1,70 @@
-    <form action='/' method='POST'>
+    <!--<form action='/' method='POST'>
       <p>
       Your Idea:
       </p>
       <input type='text' name='idea[title]'/><br/>
       <textarea name='idea[description]'></textarea><br/>
       <input type='submit'/>
-    </form>
+    </form> -->
+    <!-- <center><h1>IdeaBox</h1></center> -->
+<div class = "container">
+        
+        <div class = "row">
+            
+            <div class = "col-md-3">
+                
+                <h3><a href = "#">WHAT'S YOUR IDEA</a></h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+        <a href = "#" class = "btn btn-default">Read More</a>
+                
+            </div>
+            
+            <div class = "col-md-3">
+                
+                <h3><a href = "#">WRITE IT DOWN</a></h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+        <a href = "#" class = "btn btn-default">Read More</a>
+                
+            </div>
+            
+            <div class = "col-md-3">
+                
+                <h3><a href = "#">SUBMIT YOUR IDEA</a></h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+        <a href = "#" class = "btn btn-default">Read More</a>
+                
+            </div>
+            
+            <div class = "col-md-3">
+                
+                <h3><a href = "#">CHECK BACK</a></h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+        <a href = "#" class = "btn btn-default">Read More</a>
+                
+            </div>
+            
+        </div>
+        
+</div>
+  
+
+
+  <div class="container-fluid" id="gridInContainer">    
     <h3>Existing Ideas</h3>
-    <ul>
-      <% ideas.each_with_index do |idea, id| %>
-        <li>
-          <%= idea.title %><br/>
-          <%= idea.description %>
-          <a href="/<%= id %>/edit">Edit</a>
-          <form action="/<%= id %>" method="POST">
-            <input type="hidden" name="_method" value="DELETE">
-            <input type="submit" value="delete"/>
-          </form>
-        </li>
-      <% end %>
-    </ul>
+      <div class ="row">
+          <ul class="ideas">
+            <% ideas.each_with_index do |idea, id| %>
+              <li class="panel panel-default idea" >
+                <h5>Title: <%= idea.title %></h5>
+                <p>Idea: <%= idea.description %></p>
+                <p>Tags: <%= idea.tag %></p>
+                <a href="/<%= id %>/edit">Edit</a>
+                <form action="/<%= id %>" method="POST">
+                  <input type="hidden" name="_method" value="DELETE">
+                  <input type="submit" value="delete"/>
+                </form>
+              </li>
+            <% end %>
+          </ul>
+      </div>
+  </div> 
