--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,14 +5,14 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
-    
+    <link rel="stylesheet" href="/css/styles.css">    
   </head>
+  
   <body>
     <div class = "navbar navbar-inverse navbar-fixed-top">
       <div class = "container">
         
-        <a href = "#" class = "navbar-brand">Zoltar's Idea Box</a>
+        <a href = "http://localhost:4567/" class = "navbar-brand">Zoltar's Idea Box</a>
         
         <button class = "navbar-toggle" data-toggle = "collapse" data-target = ".navHeaderCollapse">
           <span class = "icon-bar"></span>
@@ -21,9 +21,9 @@
         </button>
         <div class = "collapse navbar-collapse navHeaderCollapse">
           <ul class = "nav navbar-nav navbar-right">
-            <li class = "active"><a href = "#">Home</a></li>
+            <li class = "active"><a href = "http://localhost:4567/">Home</a></li>
             <li><a href = "#">Blog</a></li>
-            <li class = "dropdown"> 
+            <!-- <li class = "dropdown"> 
               <a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Social Media <b class = "caret"></b></a>
               <ul class = "dropdown-menu">
                 <li><a href = "#">Twitter</a></li>
@@ -31,38 +31,55 @@
                 <li><a href = "#">Google+</a></li>
                 <li><a href = "#">Instagram</a></li>
               </ul>
-            </li>
+            </li> -->
             <li><a href = "#">About</a></li>
             <li><a href = "#">Contact</a></li>
           </ul>
-        </div>        
+        
+        <form class="navbar-form navbar-right" action="/search" method="GET" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" name="terms" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        </div>       
       </div>
     </div>
     <div class = "container" > 
         <div class = "jumbotron">
           <center><h1>Give Me An Idea</h1>
-          <p>This site is only for the purpose of storing amazing ideas</p>
+          <p>This purpose of this site is for storing amazing ideas</p>
           <form action='/' method='POST'>
-            <input type='text' name='idea[title]'/><br/>
-            <textarea name='idea[description]'></textarea><br/>
+            <input type='text' name='idea[title]' style='width: 60%;' placeholder='Title'/><br/>
+            <p></p>
+            <textarea name='idea[description]' style='width: 60%;'placeholder='Put Your Idea Here'></textarea><br/>
+            <p></p>
+            <input type='text' name='idea[tag]' style='width: 60%;' placeholder='Tag Your Idea'/><br/>
+            <p></p>
             <input type='submit'/>
           </form></center>
         </div>
     <div class="wrapper">
-      <h1>IdeaBox</h1>
-    <%= yield %>
-    </div>
-    <div class = "navbar navbar-default navbar-fixed-bottom">
+
     
-      <div class = "container">
-        <p class = "navbar-text pull-left">Site Built By Kevin Powell</p>
-        <a href = "https://github.com/x46672" class = "navbar-btn btn-danger btn pull-right">Subscribe on GitHub</a>
+     <div class = "container"> 
+        <!-- <center><h1>IdeaBox</h1></center> -->
+        <%= yield %>
       </div>
-    
     </div>
-    <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>d
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src = "/js/bootstrap.js"></script>  
+    <footer>
+      <div class = "navbar navbar-default navbar-fixed-bottom">
+      
+        <div class = "container">
+          <p class = "navbar-text pull-left">Site Built By Kevin Powell</p>
+          <a href = "https://github.com/x46672" class = "navbar-btn btn-danger btn pull-right">Subscribe on GitHub</a>
+        </div>
+      
+      </div>
+      <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>d
+      <!-- Latest compiled and minified JavaScript -->
+      <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+      <script src = "/js/bootstrap.js"></script>  
+  </footer>
   </body>
 </html>
